
   - Reconciliation: let the user select displayed columns (todo #887).
   - Settlement: let the user select displayed columns.

 Bug fixes:

   - GuidedInput: fix the width of entries (todo #868).

 Other changes:

   - ofa_application_get_file_dir(): new method.
   - ofa_dossier_misc_get_dossiers(): removed function (todo #893).
   - ofa_dossier_misc_get_exercices(): removed function.
   - ofa_main_window_open_dossier(): new method.
   - ofaIDBConnect: new DBMS connection management interface.
   - ofaIDBProvider: new DBMS directory management interface.
   - ofaMySQLConnect: new class which implements ofaIDBConnect interface.
   - ofaMySQLPeriod: new class which implements ofaIFilePeriod interface.
   - ofaMySQLMeta: new class which implements ofaIFileMeta interface.
   - ofaIFilePeriod: new exercice management interface.
   - ofaFileDir: new class for dossiers collection management.
   - ofaIFileMeta: new dossier meta properties management interface.
   - myFileMonitor: new class.
   - mySettings: new class.
   - ofa-entry-columns.{c,h}: removed obsolete files.
   - ofa-reconcil-columns.{c,h}: removed obsolete files.
   - ofaIColumns: removed obsolete interface.
   - ofaITreeviewColumn: new interface.
   - ofaITreeviewDisplay: new interface.
   - ofaReconciliation class is renamed to ofaReconcilPage.

-----------------------------------------------------------------------
 Version 0.42
 ============

 Released on 2015-11-12

 New features and improvements:

   - 'install-txz' target let the user build a locally installable tarball.

-----------------------------------------------------------------------
 Version 0.41
 ============

 Released on 2015-11-11

 New features and improvements:

   - Reconciliation: update buttons after actions are done (todo #883).
   - Reconciliation: display bat lines reconciliation date and identifier.
   - Reconciliation: review display on conciliation groups (todo #877).